--- a/Radionica2/SVM/SVM.ipynb
+++ b/Radionica2/SVM/SVM.ipynb
@@ -136,8 +136,10 @@
     }
    ],
    "source": [
-    "y1 = data1['y']\n",
-    "X1 = data1['X']\n",
+    "#Priprema X1 i y1\n",
+    "\n",
+    "#y1 =\n",
+    "#X1 = \n",
     "\n",
     "print('X1:', X1.shape)\n",
     "print('y1:', y1.shape)"
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -191,8 +193,8 @@
     }
    ],
    "source": [
-    "clf = SVC(C=1.0, kernel='linear')\n",
-    "clf.fit(X1, y1.ravel())\n",
+    "#Inicijaliziramo SVC i trenirajmo ga\n",
+    "#Vas kod ovdje\n",
     "plot_svc(clf, X1, y1)"
    ]
   },
@@ -222,8 +224,8 @@
     }
    ],
    "source": [
-    "clf.set_params(C=100)\n",
-    "clf.fit(X1, y1.ravel())\n",
+    "#Inicijaliziramo SVC s C=100 i trenirajmo ga\n",
+    "#Vas kod ovdje\n",
     "plot_svc(clf, X1, y1)"
    ]
   },
@@ -320,9 +322,10 @@
     }
    ],
    "source": [
-    "y2 = data2['y']\n",
-    "X2 = data2['X']\n",
+    "#Priprema X2 i y2\n",
     "\n",
+    "#y2 =\n",
+    "#X2 = \n",
     "print('X2:', X2.shape)\n",
     "print('y2:', y2.shape)"
    ]
@@ -375,8 +378,7 @@
     }
    ],
    "source": [
-    "clf2 = SVC(C=50, kernel='rbf', gamma=6)\n",
-    "clf2.fit(X2, y2.ravel())\n",
+    "#Inicijalizirajmo svc s jezgrom \"rbf\"\n",
     "plot_svc(clf2, X2, y2)"
    ]
   },
@@ -427,8 +429,10 @@
     }
    ],
    "source": [
-    "y3 = data3['y']\n",
-    "X3 = data3['X']\n",
+    "#Priprema X3 i y3\n",
+    "\n",
+    "#y3 =\n",
+    "#X3 = \n",
     "\n",
     "print('X3:', X3.shape)\n",
     "print('y3:', y3.shape)"
@@ -482,8 +486,7 @@
     }
    ],
    "source": [
-    "clf3 = SVC(C=1.0, kernel='poly', degree=3, gamma=10)\n",
-    "clf3.fit(X3, y3.ravel())\n",
+    "#Inicijalizirajmo svc s jezgrom \"poly\"\n",
     "plot_svc(clf3, X3, y3)"
    ]
   },
@@ -559,7 +562,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
